# kybe-backend

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  config.toml  config.toml.example  docker-compose.yml  flake.nix  rust-toolchain.toml  shell.nix
.forgejo/workflows/: deploy.yml  lint.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml
.sqlx/: query-03ac205e58e37ebdd564062edf10be6d9fb569087006fd9f026ec5cec69be7a8.json  query-1c2263f72e9b90ba1634d66b4c1da1b16c7e1bd5ec4a9838bd78a0c02628824a.json  query-2e8fd48120444a0742c67eff1f3b1ea010c1adcb4ab69aa31ce0c82d9d8d9faa.json  query-3a4542e5415abbcdbad9a3ff4b60909c15d5ceee4f65dfeffbcfd2d26bc697d5.json  query-3aa48a8a37bd0be5e5ca0cf3d970fed224e1dddd0cba85ec502f95aab902f197.json  query-6411270b89392070805d96962f1bd313cda66aede97aa2690277c4b11b5d0043.json  query-6704894c515e3f7190120ef809a9a9a88c3d5b417651c19c10afc72cbc8f3cbe.json  query-753e9cabedbb27ec264314a0197f20e808ee5fc9d120acf3cbc7b4c1c6b4f23d.json  query-7c83b5736a7e83b39421dbfe85735cca0f12f3c76bda506189fb1e0ca1f67bca.json  query-8275f5b18bbf42bc10743d9116042d61aa43554550cc5f4eba79e9dfd62145a5.json  query-85e506eda6a39417ad48c37eef30270d3949dde231326e10b39da2555e74f679.json  query-925a4ec37682f9c74a60fc6e529bd040d3a95dc17d5b8d57bd3e6ce1de5e8e79.json  query-b8815a2a68572c053149c866b5efb1d927046b524f19a46d20aa996cdb6705ab.json  query-c2295c5928cf1a38c719e09b6933bdd10624c170135942fdb3e556259de41a4a.json  query-d75af440cbd1828c8a680df6af0a8c94d91924aa7724d4718147e69efe7de61e.json  query-dbbf795ee2efe109dcfffe4aff096ca7d0ef53a11e0ecffbe3f868b43d84ec62.json  query-eda44a055a911702244dc6ea549e43433cea603244ad9c2de875cf4dc24c2799.json  query-f6cd1251f4fb444a3dc4fe08e2d4e62035042f33c76b11821c44567cb34443ea.json  query-f87270016d69e53cef6237fa9612fcb4ef84ce5a10aeef61a47bd8993af3788d.json
.woodpecker/: build.yaml
assets/: template.html
assets/portfolio/: About Me
assets/portfolio/projects/: cheat-sh  hexix  kybe-backend  kymenu  kymenu-extras  webhook-router
config/: config.toml.example
migrations/: 20251228002058_command_traces.sql  20251228002058_init.sql  20251228154242_users.sql  20251229171642_website_traces.sql  20260118111914_website_trace_country_field.sql  20260306203230_remove_user_system.sql
nix/: backend.nix  ci.nix  image.nix
src/: cataas.rs  config.toml.example  logger.rs  main.rs  prometheus.rs
src/auth/: mod.rs
src/config/: error.rs  mod.rs  types.rs
src/db/: command_traces.rs  mod.rs  traces.rs  users.rs  website_traces.rs
src/discord_bot/: calculator.rs  cataas.rs  maxmind.rs  mod.rs  traces.rs  translator.rs  version.rs  wolframalpha.rs
src/email/: mod.rs
src/maxmind/: asn.rs  city.rs  mod.rs
src/notifications/: error.rs  gotify.rs  log.rs  mod.rs
src/notifications/notification_types/: startup.rs
src/notifications/notifications/: startup.rs
src/notifications/providers/: discord.rs  gotify.rs  mod.rs
src/ssh/: mod.rs
src/translator/: mod.rs
src/webserver/: canvas.rs  fallback_404.rs  gpg.rs  ip.rs  mod.rs  pgp.rs  register.rs  root.rs
src/webserver/assets/: key.gpg
src/webserver/common/: footer.rs
src/webserver/render/: ansi.rs  color.rs  html.rs  mod.rs  object.rs  style.rs  template.html  theme.rs
src/webserver/render/builders/: canvas.rs  code_block.rs  image.rs  link_to.rs  mod.rs  text_blob.rs
src/webserver/render/color/: bit24.rs  bit4.rs  mod.rs  rgb.rs
src/webserver/routes/: canvas.rs  fallback_404.rs  ip.rs  kystash.rs  metrics.rs  mod.rs  nix.rs  now_playing.rs  pgp.rs  portfolio.rs  root.rs
src/webserver/routes/user/: register.rs
static/: ident.txt  pgp.txt
