[package]
name = "kybe-backend"
edition = "2024"

[[bin]]
name = "kybe-backend"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "derive"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
chrono = "0.4.43"
tracing-appender = "0.2.4"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
axum = { version = "0.8.8", features = ["macros"] }
anyhow = "1.0.100"
argon2 = "0.5.3"
async-imap = { version = "0.11.1", features = ["runtime-tokio"], default-features = false }
async-native-tls = { version = "0.5.0", features = ["runtime-tokio"], default-features = false }
mail-parser = "0.11.1"
validator = { version = "0.20.0",features = ["derive"] }
tower_governor = "0.8.0"
governor = "0.10.4"
urlencoding = "2.1.3"
serde_qs = "0.15.0"
html-escape = "0.2.13"
rsc = "3.0.0"
once_cell = "1.21.3"
maxminddb = { version="0.27.1", features = ["mmap"] }
tower-http = { version="0.6.8", features = ["fs"] }
