[package]
name = "kybe-backend"
edition = "2024"

[[bin]]
name = "kybe-backend"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "derive"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "multipart"] }
prometheus = { version = "0.14.0", features = ["process"] }
uuid = { version = "1.22.0", features = ["v7", "serde"] }
maxminddb = { version = "0.27.3", features = ["mmap"] }
tokio = { version = "1.49", features = ["full"] }
tower_governor = "0.8.0"
async-trait = "0.1.89"
html-escape = "0.2.13"
lazy_static = "1.5.0"
urlencoding = "2.1.3"
once_cell = "1.21.4"
futures = "0.3.32"
chrono = "0.4.44"
russh = "0.57.1"
toml = "1.0.6"
rsc = "3.0.0"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_qs = "1.0.0"

tower-http = { version = "0.6.8", features = ["fs"] }
axum = { version = "0.8.8", features = ["macros"] }
governor = "0.10.4"
tower = "0.5.3"

thiserror = "2.0.18"
anyhow = "1.0.102"

poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
