[package]
name = "kybe-backend"
edition = "2024"
version = "0.0.0"

[[bin]]
name = "kybe-backend"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "rustls", "multipart"] }
maxminddb = { version = "0.29.0", features = ["mmap"] }
tokio = { version = "1.49", features = ["full"] }
prometheus-client = "0.25.0"
tower_governor = "0.8.0"
enum_delegate = "0.2.0"
async-trait = "0.1.89"
html-escape = "0.2.13"
urlencoding = "2.1.3"
once_cell = "1.21.4"
futures = "0.3.32"
chrono = "0.4.44"
russh = "0.62.0"
rand = "0.10.1"
toml = "1.0.6"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_qs = "1.0.0"

tower-http = { version = "0.7.0", features = ["fs"] }
axum = { version = "0.8.8", features = ["macros"] }
governor = "0.10.4"
tower = "0.5.3"

thiserror = "2.0.18"
anyhow = "1.0.102"

poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
